build: Avoid further warnings when running with Java >= 19
Signed-off-by: Sebastian Schuberth <sebastian@doubleopen.org>